<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dash_line"
        android:orientation="horizontal">

        <com.saic.visit.widget.MTextViewTask
            android:id="@+id/item_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:paddingBottom="@dimen/padding_16"
            android:paddingLeft="@dimen/padding_24"
            android:paddingTop="@dimen/padding_16"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_huge" />

        <TextView
            android:id="@+id/txt_des"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/padding_12"
            android:background="@drawable/blue_button"
            android:gravity="center_vertical"
            android:paddingBottom="@dimen/padding_4"
            android:paddingLeft="@dimen/padding_16"
            android:paddingRight="@dimen/padding_16"
            android:paddingTop="@dimen/padding_4"
            android:text="@string/add_visit_description"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_huge" />

        <ImageView
            android:id="@+id/img_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/padding_4"
            android:paddingRight="@dimen/padding_16"
            android:src="@drawable/check_blue_small"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_huge" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height"
        android:background="@color/bg_gray" />

    <TextView
        android:id="@+id/txt_reason"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:background="@drawable/dash_line_white"
        android:paddingBottom="@dimen/padding_16"
        android:paddingLeft="@dimen/padding_24"
        android:paddingRight="@dimen/padding_32"
        android:paddingTop="@dimen/padding_16"
        android:text="@string/add_visit_reason"
        android:textColor="@color/black"
        android:textSize="@dimen/font_size_huge" />

    <FrameLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <com.saic.visit.widget.MListView
            android:id="@+id/list_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:cacheColorHint="#00000000"
            android:divider="@null"
            android:dividerHeight="0dp"
            android:fadingEdge="none"
            android:scrollbars="none" />
    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height"
        android:background="@color/bg_gray" />

    <EditText
        android:id="@+id/edit_remark"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edittext_height"
        android:background="@null"
        android:hint="@string/remark"
        android:paddingBottom="@dimen/padding_5"
        android:paddingLeft="@dimen/padding_16"
        android:paddingTop="@dimen/padding_5"
        android:textColor="@color/black"
        android:textSize="@dimen/font_size" />
</LinearLayout>
